# wolfxl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml
Plans/: launch-posts.md  native-reader-calamine-exit-audit.md  ooxml-current-evidence-bundle.json  openpyxl-parity-program.md  parity-closure-empty-limitations.md  pre-release-expanded-oracle-and-cleanup.md  real-world-excel-fidelity-gap-discovery.md  sprint-nu.md  sprint-omicron.md  sprint-pi.md  sprint-xi.md  worktree-branch-audit.md
crates/wolfxl-autofilter/: Cargo.toml
crates/wolfxl-autofilter/src/: emit.rs  evaluate.rs  lib.rs  parse.rs
crates/wolfxl-autofilter/src/model/: column.rs  filter.rs  mod.rs  sort.rs
crates/wolfxl-classify/: Cargo.toml
crates/wolfxl-classify/src/: lib.rs
crates/wolfxl-cli/: Cargo.toml  README.md
crates/wolfxl-cli/src/: main.rs  render.rs
crates/wolfxl-cli/src/commands/: agent.rs  map.rs  mod.rs  peek.rs  schema.rs
crates/wolfxl-cli/tests/: cli.rs
crates/wolfxl-cli/tests/fixtures/: sample-minimal.csv  wide-table.xlsx
crates/wolfxl-cli/tests/golden/: sample-financials.csv  sample-financials.json  sample-financials.text  wide-table.csv  wide-table.json  wide-table.text
crates/wolfxl-core/: Cargo.toml  README.md
crates/wolfxl-core/src/: cell.rs  csv_reader.rs  error.rs  format.rs  lib.rs  map.rs  ooxml.rs  schema.rs  sheet.rs  styles.rs  workbook.rs  worksheet_xml.rs
crates/wolfxl-core/tests/: integration_real_xlsx.rs  multi_format.rs  styles_walker.rs
crates/wolfxl-core/tests/fixtures/: formatted-values.xlsx  sample-financials.xlsx  sample-minimal.ods  sample-minimal.xls  tier1_01_cell_values.xlsx
crates/wolfxl-formula/: Cargo.toml  README.md
crates/wolfxl-formula/src/: lib.rs  reference.rs  tests.rs  tokenizer.rs  translate.rs
crates/wolfxl-merger/: Cargo.toml
crates/wolfxl-merger/src/: lib.rs
crates/wolfxl-merger/tests/: proptest_merge.rs  round_trip.rs
crates/wolfxl-pivot/: Cargo.toml  README.md
crates/wolfxl-pivot/src/: lib.rs  mutate.rs  parse.rs  structural.rs
crates/wolfxl-pivot/src/emit/: cache.rs  mod.rs  records.rs  slicer.rs  slicer_cache.rs  table.rs
crates/wolfxl-pivot/src/model/: cache.rs  mod.rs  records.rs  slicer.rs  slicer_cache.rs  table.rs
crates/wolfxl-pivot/tests/: parse_existing.rs
crates/wolfxl-reader/: Cargo.toml
crates/wolfxl-reader/src/: external_links.rs  lib.rs  xlsb.rs
crates/wolfxl-reader/src/xlsb/: formula.rs  style_records.rs  worksheet_features.rs  worksheet_meta.rs
crates/wolfxl-reader/tests/: external_links_parse.rs
crates/wolfxl-rels/: Cargo.toml
crates/wolfxl-rels/src/: lib.rs  part_id_allocator.rs  subgraph_walk.rs
crates/wolfxl-rels/tests/: dedup.rs  proptest_round_trip.rs  round_trip.rs
crates/wolfxl-structural/: Cargo.toml
crates/wolfxl-structural/src/: axis.rs  cols.rs  control_props_shift.rs  drawing_shift.rs  lib.rs  range_move.rs  sheet_copy.rs  shift_anchors.rs  shift_cells.rs  shift_formulas.rs  shift_workbook.rs  table_shift.rs  tests.rs  vml_shift.rs
crates/wolfxl-structural/tests/: prop_apply_workbook_shift.rs
crates/wolfxl-writer/: Cargo.toml
crates/wolfxl-writer/src/: intern.rs  lib.rs  refs.rs  rich_text.rs  streaming.rs  test_utils.rs  xml_escape.rs  zip.rs
crates/wolfxl-writer/src/emit/: calc_chain_xml.rs  charts.rs  columns.rs  comments_xml.rs  conditional_formats.rs  content_types.rs  data_validations.rs  dimension.rs  doc_props.rs  drawing_refs.rs  drawings.rs  drawings_vml.rs  hyperlinks.rs  merges.rs  mod.rs  page_breaks.rs  persons_xml.rs  rels.rs  shared_strings_xml.rs  sheet_data.rs  sheet_format.rs  sheet_rel_ids.rs  sheet_setup.rs  sheet_views.rs  sheet_xml.rs  styles_xml.rs  table_parts.rs  tables_xml.rs  threaded_comments_xml.rs  workbook_xml.rs
crates/wolfxl-writer/src/emit/charts/: axes.rs  layout.rs  pivot.rs  plot.rs  primitives.rs  series.rs  style.rs  text.rs
crates/wolfxl-writer/src/model/: cell.rs  chart.rs  comment.rs  conditional.rs  date.rs  defined_name.rs  format.rs  image.rs  mod.rs  table.rs  threaded_comment.rs  validation.rs  workbook.rs  worksheet.rs
crates/wolfxl-writer/src/parse/: mod.rs  page_breaks.rs  sheet_setup.rs  workbook_security.rs
crates/wolfxl-writer/tests/: charts.rs  roundtrip_minimal.rs  streaming_write.rs  threaded_comments_roundtrip.rs
docs/: case-study-synthgl.md  docs.json  encryption.md  index.md  mkdocs.yml  release-notes-1.1.md  release-notes-1.2.md  release-notes-1.3.md  release-notes-1.4.md  release-notes-1.5.md  release-notes-1.6.1.md  release-notes-1.6.md  release-notes-1.7.md  release-notes-2.0.md
scripts/: audit_ooxml_completion_claim.py  audit_ooxml_copy_sheet_render_equivalence.py  audit_ooxml_corpus_buckets.py  audit_ooxml_corpus_portfolio.py  audit_ooxml_evidence_bundle.py  audit_ooxml_fidelity.py  audit_ooxml_fidelity_coverage.py  audit_ooxml_gap_radar.py  audit_ooxml_intentional_render_delta.py  audit_ooxml_interactive_evidence.py  audit_ooxml_no_visual_change_render_equivalence.py  audit_ooxml_random_corpus_holdout.py  audit_ooxml_rename_sheet_render_equivalence.py  audit_ooxml_render_page_multiset_equivalence.py  audit_ooxml_retarget_external_links_render_equivalence.py  copy_synthgl_fixtures.py  generate_p1_fidelity_fixtures.py  inventory_xlsb_records.py  regenerate_chart_fixtures.py  render_compat_matrix.py  run_ooxml_app_smoke.py  run_ooxml_fidelity_mutations.py  run_ooxml_interactive_probe.py  run_ooxml_render_compare.py  run_openpyxl_corpus.py  sprint_kappa_build_fixtures.py  summarize_ooxml_render_boundary.py  verify_rfc.py
src/: atomic_save.rs  calamine_format_helpers.rs  calamine_record_format.rs  calamine_sheet_records.rs  calamine_style_dicts.rs  calamine_styled_array_formulas.rs  calamine_styled_backend.rs  calamine_value_helpers.rs  calamine_xlsb_xls_backend.rs  lib.rs  native_reader_backend.rs  native_reader_cell_helpers.rs  native_reader_cf.rs  native_reader_comments.rs  native_reader_dimensions.rs  native_reader_drawings.rs  native_reader_filter.rs  native_reader_hyperlinks.rs  native_reader_metadata.rs  native_reader_named_ranges.rs  (+27 more)
(+585 files in other folders)
