[workspace]
resolver = "2"
members = ["crates/wolfxl-core", "crates/wolfxl-cli"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/SynthGL/wolfxl"
authors = ["Wolfgang Schoenberger"]

[workspace.dependencies]
calamine-styles = { version = "0.1", features = ["dates"] }
rust_xlsxwriter = { version = "0.79", features = ["chrono"] }
indexmap = "2.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
chrono = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package]
name = "wolfxl"
version = "0.3.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast, openpyxl-compatible Excel I/O backed by Rust"
build = "build.rs"

[lib]
name = "wolfxl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "multiple-pymethods"] }
calamine-styles.workspace = true
rust_xlsxwriter.workspace = true
indexmap.workspace = true
zip.workspace = true
quick-xml.workspace = true
chrono.workspace = true

[build-dependencies]
pyo3-build-config = "0.24"
