[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wolfxl"
version = "0.5.0"
description = "Fast, openpyxl-compatible Excel I/O with Rust backend and built-in formula engine (67 functions, financial, date, time, text, lookup, conditional stats)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Wolfgang Schoenberger" }]
keywords = ["excel", "xlsx", "openpyxl", "rust", "performance", "spreadsheet", "formula", "calc", "financial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
calc = ["formulas>=1.3.3,<2.0"]

[project.urls]
Homepage = "https://github.com/SynthGL/wolfxl"
Repository = "https://github.com/SynthGL/wolfxl"
Issues = "https://github.com/SynthGL/wolfxl/issues"
Changelog = "https://github.com/SynthGL/wolfxl/releases"

[tool.maturin]
bindings = "pyo3"
module-name = "wolfxl._rust"
python-source = "python"

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["python"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that are sensitive to CI timing",
    "rich_features: tests that exercise Wave 4B rich-feature pymethods (hyperlinks, comments, named ranges, properties, tables, CF, DV, print area). Skipped under WOLFXL_WRITER=native via -k 'not rich' until 4B lands.",
    "smoke: hand-rolled Layer 1/3 smoke gates for the native writer (precedes the W4C diff harness).",
    "libreoffice_smoke: Layer 4 LibreOffice headless round-trip (gold-star, opt-in via WOLFXL_RUN_LIBREOFFICE_SMOKE=1).",
    "rfc030: RFC-030 — insert_rows / delete_rows in modify mode.",
    "rfc034: RFC-034 — Worksheet.move_range in modify mode.",
]

[tool.mypy]
strict = true
