[package]
name = "wolfxl-classify"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Magic-byte file-format sniffer + Read+Seek source enums for the .xlsx / .xlsb / .xls / .ods read backends. Sprint Κ Pod-α."

[dependencies]
calamine-styles.workspace = true
zip.workspace = true
