[package]
name = "wolfxl-cli"
version = "0.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Excel xlsx previewer for AI agents. Installs the `wolfxl` binary with `peek` (styled previews), `map` (workbook overview), `agent` (token-budgeted briefing), and `schema` (per-column type/cardinality/format inference) subcommands."
readme = "README.md"
keywords = ["xlsx", "excel", "cli", "preview", "spreadsheet"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "wolfxl"
path = "src/main.rs"

[dependencies]
wolfxl-core = { path = "../wolfxl-core", version = "0.7" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde_json.workspace = true
unicode-width = "0.2"
tiktoken-rs = "0.11.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
