[package]
name = "wolfxl-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust core for wolfxl: spreadsheet reading, schema inference, and formatting (no Python bindings)"

[dependencies]
calamine-styles.workspace = true
chrono.workspace = true
indexmap.workspace = true
anyhow.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "indexmap/serde"]
