[package]
name = "wolfxl-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust xlsx reader with Excel number-format-aware cell rendering. Backs the wolfxl-cli previewer."
keywords = ["xlsx", "excel", "spreadsheet", "calamine"]
categories = ["parser-implementations", "command-line-utilities"]

[dependencies]
calamine-styles.workspace = true
chrono.workspace = true
