[package]
name = "wolfxl-core"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust reader for xlsx/xls/xlsb/ods/csv with Excel number-format-aware cell rendering. Backs the wolfxl-cli previewer."
readme = "README.md"
keywords = ["xlsx", "excel", "spreadsheet", "calamine", "csv"]
categories = ["parser-implementations", "command-line-utilities"]

[dependencies]
calamine-styles.workspace = true
chrono.workspace = true
quick-xml.workspace = true
zip.workspace = true
wolfxl-reader = { path = "../wolfxl-reader", version = "0.1" }
