[package]
name = "wolfxl-reader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native WolfXL workbook readers used to replace calamine-backed read paths."

[dependencies]
quick-xml.workspace = true
zip.workspace = true
wolfxl-formula = { path = "../wolfxl-formula", version = "0.1" }
wolfxl-rels = { path = "../wolfxl-rels", version = "0.1" }
