[package]
name = "wolfxl-rels"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OOXML *.rels (Open Packaging Conventions Relationships) parser, mutable graph, and serializer shared by the wolfxl writer and patcher."

[dependencies]
quick-xml.workspace = true

[dev-dependencies]
zip.workspace = true
proptest = "1"
