[package]
name = "wolfxl-structural"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structural worksheet operations (insert/delete rows + cols) — pure-Rust XML rewrites for the wolfxl patcher. Shared between RFC-030 (rows) and RFC-031 (cols)."

[dependencies]
wolfxl-formula = { path = "../wolfxl-formula", version = "0.1" }
wolfxl-rels = { path = "../wolfxl-rels", version = "0.1" }
# Sprint Ν Pod-γ (RFC-035 §10) — pivot deep-clone helpers.
wolfxl-pivot = { path = "../wolfxl-pivot", version = "2.0.0" }
quick-xml.workspace = true

[dev-dependencies]
proptest = "1"
