[package]
name = "wolfxl-writer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native xlsx writer for wolfxl — pure-Rust OOXML emitter + ZIP packager, no rust_xlsxwriter dependency."

[dependencies]
chrono.workspace = true
indexmap.workspace = true
quick-xml.workspace = true
zip.workspace = true
wolfxl-rels = { path = "../wolfxl-rels", version = "0.1" }

[dev-dependencies]
# Integration tests re-parse the emitter output with quick-xml and crack open
# the packaged xlsx with the zip crate. Both are already workspace deps.
quick-xml.workspace = true
zip.workspace = true
