[package]
name = "wolfxl-writer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native xlsx writer for wolfxl — pure-Rust OOXML emitter + ZIP packager, no rust_xlsxwriter dependency."

[dependencies]
chrono.workspace = true
indexmap.workspace = true
quick-xml.workspace = true
zip.workspace = true
wolfxl-rels = { path = "../wolfxl-rels", version = "0.1" }
# Used for the ECMA-376 §18.3.1.99 child-element ordering table referenced
# from `emit/sheet_xml.rs` section comments. The writer does not call
# `merge_blocks` — it has full model state and emits everything in one
# pass — but referencing the same `ECMA_ORDER` table guarantees the
# writer (commit-time) and merger (modify-time) cannot drift on slot
# numbers as the spec evolves.
wolfxl-merger = { path = "../wolfxl-merger", version = "0.1" }

[dev-dependencies]
# Integration tests re-parse the emitter output with quick-xml and crack open
# the packaged xlsx with the zip crate. Both are already workspace deps.
quick-xml.workspace = true
zip.workspace = true
